# pytest-static

./: .cookiecutter.json  .coveragerc  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  .safety-policy.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  getting-started.md  index.md  reference.md  requirements.txt  usage.md
scripts/: first_time_branches_setup.bat  first_time_setup.bat
src/: lib.rs
src/pytest_static/: __init__.py  __main__.py  config.py  constants.py  custom_typing.py  exceptions.py  parametric.py  plugin.py  type_handler.py  type_sets.py  util.py
tests/: __init__.py  conftest.py  test_util.py  util.py
tests/acceptance_tests/: __init__.py
tests/integration_tests/: __init__.py  test_lib.py  test_plugin.py
tests/unit_tests/: __init__.py  conftest.py  test_exceptions.py  test_lib.py  test_main.py  test_parametric.py  test_plugin.py  test_type_handler.py  test_type_sets.py
